--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -179,7 +179,9 @@
 
 <main class="main">
   <div class="content">
-    <app-content-card></app-content-card>
+
+<app-content-list [contentItems]="contentItems"></app-content-list>
+
         
   
     
