--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -180,7 +180,7 @@
 <main class="main">
   <div class="content">
 
-<app-content-list [contentItems]="contentItems"></app-content-list>
+<app-content-list></app-content-list>
 
         
   
