--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,20 @@
   <div class="content">
 
     
-<input type="number" [(ngModel)]="inputId" placeholder="Enter content ID">
-<button (click)="loadContentById()">Load Content</button>
+<!-- <input type="number" [(ngModel)]="inputId" placeholder="Enter content ID">
+<button (click)="loadContentById()">Load Content</button> -->
 
-        
+    
+<app-modify-content-component (contentUpdated)="handleContentUpdated($event)"></app-modify-content-component>
+<app-content-list [contentItems]="contentItems"></app-content-list>
+
 <app-content-card *ngIf="selectedItem" [contentItem]="selectedItem"></app-content-card>
 <app-message></app-message>
-<app-modify-content (contentUpdated)="refreshContentList()"></app-modify-content>
-<app-content-list></app-content-list>
+<!-- <app-modify-content-component (contentUpdated)="refreshContentList()"></app-modify-content-component> -->
+<!-- Place this where you want the modify content form to appear -->
+<!-- <app-modify-content-component (contentUpdated)="handleContentUpdated($event)"></app-modify-content-component>
+xs
+<app-content-list></app-content-list> -->
 
 
     
