--- a/src/app/modify-content-component/modify-content-component.component.html
+++ b/src/app/modify-content-component/modify-content-component.component.html
@@ -9,5 +9,5 @@
     <input [(ngModel)]="content.tags" placeholder="Tags (comma-separated)">
     <!-- Button text changes based on whether updating or adding -->
     <button (click)="addOrUpdateContent()">{{buttonText}}</button>
-</div>
+</div><br>
 
