--- a/src/app/content-list/content-list.component.html
+++ b/src/app/content-list/content-list.component.html
@@ -1,26 +1,28 @@
-<!-- Search Input and Button -->
-<!-- <input type="text" [(ngModel)]="searchTitle" placeholder="Enter title of item">
-<button (click)="checkContentExists()"> Check Existence</button>
+
+<!-- <app-content-card [contentItem]="contentItems"></app-content-card> -->
+<app-modify-content-component (contentAdded)="onContentAdded($event)"></app-modify-content-component>
 
 
 
-Display search result message -->
-<!-- <p [ngStyle]="{'color': contentExists ? 'green' : 'red'}">{{ message }}</p> -->
 
-<app-content-card [contentItem]="contentItems"></app-content-card>
+
+
+<div *ngFor="let content of contentItems">
+  <app-content-card [contentItem]="content"></app-content-card>
+</div>
 
 <!-- List for 'Fashion' type -->
-<h2>Fashion</h2>
-<app-content-card *ngFor="let contentItem of contentItems | filterContent:'Fashion'" [contentItem]="contentItem"></app-content-card>
+<!-- <h2>Fashion</h2>
+<app-content-card *ngFor="let contentItem of contentItems | filterContent:'Fashion'" [contentItem]="contentItem"></app-content-card> -->
 
 <!-- List for 'Mansion' type -->
-<h2>Mansion</h2>
-<app-content-card *ngFor="let contentItem of contentItems | filterContent:'Mansion'" [contentItem]="contentItem"></app-content-card>
+<!-- <h2>Mansion</h2>
+<app-content-card *ngFor="let contentItem of contentItems | filterContent:'Mansion'" [contentItem]="contentItem"></app-content-card> -->
 
 <!-- List for 'Food' type -->
-<h2>Food</h2>
-<app-content-card *ngFor="let contentItem of contentItems | filterContent:'Food'" [contentItem]="contentItem"></app-content-card>
+<!-- <h2>Food</h2>
+<app-content-card *ngFor="let contentItem of contentItems | filterContent:'Food'" [contentItem]="contentItem"></app-content-card> -->
 
 <!-- List without a given type -->
-<app-content-card *ngFor="let contentItem of contentItems | filterContent" [contentItem]="contentItem"></app-content-card>
-
+<!-- <app-content-card *ngFor="let contentItem of contentItems | filterContent" [contentItem]="contentItem"></app-content-card>
+ -->
