--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,2 +1,8 @@
+<div *ngIf="messageService.messages.length">
 
-<div *ngFor="let message of messages" class="message">{{ message }}</div>
+    <h2>Messages</h2>
+    <button type="button" class="clear"
+            (click)="messageService.clear()">Clear messages</button>
+    <div *ngFor='let message of messageService.messages'> {{message}} </div>
+  
+  </div>
